5.0.3 -> 5.0.4:
     - jbj: fix: is_selinux_enbled() > 0 is the correct test.
     - rpm.org: Mask signals while moving rebuilt rpmdb into place.
     - rpm.org: Restore rpmdb selinux contexts to default after rebuild (#442149)
     - jbj: debuginfo: refactor 2 existing upgrade policy rules before
	adding a new contextually sensitive rule for -debuginfo packages.
     - jbj: debuginfo: add general rpmdbCount() to get number of items for
	any tag index, not just RPMTAG_NAME as was in rpmdbCountPackages().
    - jbj: install rpmmtree.8, update POTFILES.in & Doxyfiles.in.
    - jbj: add %_build_iconsize macro to permit configuration.
    - jbj: trash-and-restore macro config for multiple CLI arg builds.
    - jbj: rpmrepo: correct requiressqlentry tag name typo.
    - jbj: fix: handle '%{arch}\' with \ at end-of-string correctly.
    - jbj: tests: verify ref/* data using rpmdigest/rpmmtree.
    - jbj: move rpmdigest/rpmmtree/rpmrepo back to tools/ for installation.
    - jbj: tests: verify rpmrepo XML spewage using popt-1.14.
    - jbj: tests: verify XML/YAML markup queries using popt-1.14.
    - jbj: tests: download popt-1.14 packages for use in tests.
    - jbj: yaml: fix: single element string arrays had extra "- ".
    - jbj: yaml: remove the hotwired hack for SRPM dirnames indentation.
    - jbj: backport --queryformat pipeline syntax from HEAD.
    - jbj: rpmsw: add rpmswPrint to display stopwtch results.
    - jbj: rpmdigest: s/--all/--alldigests/ w rpmio "make check".
    - jbj: rpmio: increase no. of digests from 4 => 32 for rpmdigest --all.
    - jbj: upgrade to db-4.7.25.
    - jbj: rpmdb: fix: limit RUNRECOVERY attempts, not every lazy open.
    - jbj: backport assorted rpmio changes from HEAD to stay in sync.
    - jbj: make sure the open path is set when using [bgl]zdOpen vector too.
    - jbj: lzdio: rework the layering to be more similar to gzdio/bzdio.
    - jbj: rpmrepo: fix: --lzma segfault, lzdFdopen was not saving path.