@@ -1,4 +1,5 @@
 5.0.3 -> 5.0.4:
+    - jbj: add expanded build scripts for --specsrpm --queryformat spewage.
      - jbj: fix: is_selinux_enbled() > 0 is the correct test.
      - rpm.org: Mask signals while moving rebuilt rpmdb into place.
      - rpm.org: Restore rpmdb selinux contexts to default after rebuild (#442149)
